src/test/ui/proc-macro/derive-helper-shadowing.stderr
error: cannot find attribute macro `empty_helper` in this scope
  --> $DIR/derive-helper-shadowing.rs:22:15
   |
LL |             #[empty_helper]
   |               ^^^^^^^^^^^^

error[E0659]: `empty_helper` is ambiguous (derive helper attribute vs any other name)
  --> $DIR/derive-helper-shadowing.rs:8:3
   |
LL | #[empty_helper]
   |   ^^^^^^^^^^^^ ambiguous name
   |
note: `empty_helper` could refer to the derive helper attribute defined here
  --> $DIR/derive-helper-shadowing.rs:9:10
   |
LL | #[derive(Empty)]
   |          ^^^^^
note: `empty_helper` could also refer to the attribute macro imported here
  --> $DIR/derive-helper-shadowing.rs:6:5
   |
LL | use test_macros::empty_attr as empty_helper;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: use `crate::empty_helper` to refer to this attribute macro unambiguously

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0659`.
